<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_newspaper_24"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_baseline_message_24"
            android:title="@string/message" />
    </group>
    <item android:title="communication">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_baseline_map_24"
                android:title="@string/map" />
            <item
                android:id="@+id/nav_quiz"
                android:icon="@drawable/ic_baseline_question_mark_24"
                    android:title="@string/quizz" />
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/message" />
        </menu>
    </item>
</menu>